src/styles/base/generic.css
body {
  --headerHeight: 48px;
  --navbarHeight: 48px;

  color: hsla(0, 0%, 0%, 0.8);
  font-family: 'Source Sans Pro', sans-serif;
  line-height: 1.25;
  background-color: hsl(225, 10%, 90%);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  color: hsla(0, 0%, 0%, 1);
  font-family: 'Source Serif Pro', serif;
}

a {
  color: hsl(225, 100%, 25%);
  text-decoration: none;
  opacity: 0.8;
  transition: opacity 500ms cubic-bezier(0.19, 1, 0.22, 1);
  fill: hsl(225, 100%, 25%);
}

hr {
  border: none;
  border-bottom: 1px solid hsla(0, 0%, 0%, 0.2);
}

@media screen and (min-width: 768px) {
  a:hover {
    opacity: 0.5;
  }
}

